<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/title_qq_tim">
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_total_switch_qq"
            android:title="@string/text_open" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/text_mode">
        <ListPreference
            android:defaultValue="@string/mode_default"
            android:entries="@array/entries_mode"
            android:entryValues="@array/entries_mode_values"
            android:key="@string/key_mode_qq"
            android:summary="@string/text_default"
            android:title="@string/text_word_mode" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/key_is_only_screen_off_qq"
            android:title="@string/text_only_screen_off" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/text_vibrator">
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_is_vibrator_qq"
            android:title="@string/text_open_vibrator" />
        <cn.vove7.qtmnotificationplugin.preferences.VibratorOptionPreference
            android:dialogTitle="@string/text_vibrator_options"
            android:title="@string/text_vibrator_options"
            app:keyNum="@string/key_repeat_num_qq"
            app:keyStrength="@string/key_vibrator_strength_qq" />
        <!--<ListPreference-->
        <!--android:defaultValue="2"-->
        <!--android:dialogTitle="@string/text_repeat_num"-->
        <!--android:entries="@array/entries_repeat_num"-->
        <!--android:entryValues="@array/entries_repeat_num"-->
        <!--android:key="@string/key_repeat_num_qq"-->
        <!--android:summary="@string/text_repeat_num"-->
        <!--android:title="@string/text_num" />-->
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/text_ringtone">
        <SwitchPreference
            android:key="@string/key_is_alarm_qq"
            android:title="@string/text_open_notification_ringtone" />
        <RingtonePreference
            android:key="@string/key_ringtone_qq"
            android:ringtoneType="notification"
            android:title="@string/text_ringtone" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/text_fa">
        <Preference
            android:key="@string/key_fas_qq"

            android:title="@string/text_manage_fa" />
        <RingtonePreference
            android:key="@string/key_fa_ringtone_qq"
            android:ringtoneType="notification"
            android:title="@string/text_ringtone" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/text_black_list">
        <Preference
            android:key="@string/key_black_list_qq"
            android:summary="@string/summary_black_list"
            android:title="@string/text_manage_black_list" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/text_no_distrubing">
        <SwitchPreference
            android:key="@string/key_is_no_distrubing_qq"
            android:title="@string/text_open_no_distrubing" />
        <cn.vove7.qtmnotificationplugin.preferences.TimeQuantumPickerPreference
            android:key="@string/key_no_disturbing_time_quantum_qq"
            android:title="@string/text_time_quantum" />
        <CheckBoxPreference
            android:key="@string/key_is_fa_no_distrubing_qq"
            android:summary="@string/summary_fa"
            android:title="@string/text_fa_notify" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/text_other">
        <cn.vove7.qtmnotificationplugin.preferences.NoBotherPreference
            android:key="@string/key_max_msg_num_qq"
            android:summary="@string/summary_no_bother"
            android:title="@string/text_no_bother"
            app:maxValue="99"
            app:minValue="3" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/key_notify_all_member_qq"
            android:summary="@string/text_notify_all_member_msg_summary"
            android:title="@string/text_all_member_msg" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/key_notify_qq_zone"
            android:title="@string/text_notify_qq_zone" />

    </PreferenceCategory>

</PreferenceScreen>